JDK-8008508 : CMS does not correctly reduce heap size after a Full GC
  • Type: Bug
  • Component: hotspot
  • Sub-Component: gc
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • Submitted: 2013-02-20
  • Updated: 2013-04-30
  • Resolved: 2013-04-07
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 8 Other
8Fixed hs25Fixed
Description
In general CMS does not reduce it's heap size because the free space is 
maintained in a freelist and reducing the committed space in the virtualspace
for the CMS generation is complicated.  The exception is after a Full GC when
CMS should reduce the size of the heap.