8008508: CMS does not correctly reduce heap size after a Full GC

Reviewed-by: johnc, ysr